SF-501 Scrolling layout issues introduced to the checking app (#253)
- Fixes issue with the text panel and the question panel forcing the navigation bar off the viewport
- Updated question dialog to implement the checking text panel in a way that doesn't affect the checking app
- Fixed up various typing issues with recent change over to QuestionDoc

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-text/checking-text.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking-text/checking-text.component.scss
@@ -1,4 +1,5 @@
 app-checking-text {
+  position: absolute;
   height: 100%;
   width: 100%;
   display: flex;
